Carbuncle/src/jtb.out.jj
//
// Generated by JTB 1.3.2
//



PARSER_BEGIN(ParserCarbuncle)
import syntaxtree.*;
import java.util.Vector;


public class ParserCarbuncle 
{
}

class JTBToolkit {
   static NodeToken makeNodeToken(Token t) {
      return new NodeToken(t.image.intern(), t.kind, t.beginLine, t.beginColumn, t.endLine, t.endColumn);
   }
}


PARSER_END(ParserCarbuncle)

S S() :
{
   NodeToken n0;
   Token n1;
   Azione n2;
   Bersaglio n3;

   
}
{
   n1=<PERSONAGGIO> { n0 = JTBToolkit.makeNodeToken(n1); }
   n2=Azione()
   n3=Bersaglio()
   
   { return new S(n0,n2,n3); }
}

Bersaglio Bersaglio() :
{
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;

   
}
{
   (
      n2=<ALLEATI> { n1 = JTBToolkit.makeNodeToken(n2); }
      { n0 = new NodeChoice(n1, 0); }
   |
      n4=<NEMICI> { n3 = JTBToolkit.makeNodeToken(n4); }
      { n0 = new NodeChoice(n3, 1); }
   |
      n6=<PERSONAGGIO> { n5 = JTBToolkit.makeNodeToken(n6); }
      { n0 = new NodeChoice(n5, 2); }
   )
   
   { return new Bersaglio(n0); }
}

Azione Azione() :
{
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   Magia n3;
   Oggetto n4;
   Invocazione n5;
   TecnicaSpeciale n6;

   
}
{
   (
      n2=<ATTACCO> { n1 = JTBToolkit.makeNodeToken(n2); }
      { n0 = new NodeChoice(n1, 0); }
   |
      n3=Magia()
      { n0 = new NodeChoice(n3, 1); }
   |
      n4=Oggetto()
      { n0 = new NodeChoice(n4, 2); }
   |
      n5=Invocazione()
      { n0 = new NodeChoice(n5, 3); }
   |
      n6=TecnicaSpeciale()
      { n0 = new NodeChoice(n6, 4); }
   )
   
   { return new Azione(n0); }
}

Magia Magia() :
{
   NodeToken n0;
   Token n1;
   NodeChoice n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;

   
}
{
   n1="lancia" { n0 = JTBToolkit.makeNodeToken(n1); }
   (
      (
         n4=<ELEMENTALE> { n3 = JTBToolkit.makeNodeToken(n4); }
         { n2 = new NodeChoice(n3, 0); }
      |
         n6=<NONELEMENTALE> { n5 = JTBToolkit.makeNodeToken(n6); }
         { n2 = new NodeChoice(n5, 1); }
      |
         n8=<DISTATO> { n7 = JTBToolkit.makeNodeToken(n8); }
         { n2 = new NodeChoice(n7, 2); }
      |
         n10=<BIANCA> { n9 = JTBToolkit.makeNodeToken(n10); }
         { n2 = new NodeChoice(n9, 3); }
      )
      
   )
   n12=<SU> { n11 = JTBToolkit.makeNodeToken(n12); }
   
   { return new Magia(n0,n2,n11); }
}

Oggetto Oggetto() :
{
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;

   
}
{
   n1="usa" { n0 = JTBToolkit.makeNodeToken(n1); }
   n3=<NOMEOGGETTO> { n2 = JTBToolkit.makeNodeToken(n3); }
   n5=<SU> { n4 = JTBToolkit.makeNodeToken(n5); }
   
   { return new Oggetto(n0,n2,n4); }
}

Invocazione Invocazione() :
{
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;

   
}
{
   n1="invoca" { n0 = JTBToolkit.makeNodeToken(n1); }
   n3=<GF> { n2 = JTBToolkit.makeNodeToken(n3); }
   n5=<SU> { n4 = JTBToolkit.makeNodeToken(n5); }
   
   { return new Invocazione(n0,n2,n4); }
}

TecnicaSpeciale TecnicaSpeciale() :
{
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;

   
}
{
   n1="esegue" { n0 = JTBToolkit.makeNodeToken(n1); }
   n3=<NOMETECNICA> { n2 = JTBToolkit.makeNodeToken(n3); }
   n5=<SU> { n4 = JTBToolkit.makeNodeToken(n5); }
   
   { return new TecnicaSpeciale(n0,n2,n4); }
}

SKIP :
{
   " "
   | "\t"
   | "\n"
   | "\r"
}

TOKEN :
{
   <ATTACCO: "attacca">
   | <ELEMENTALE: ("fire" | "thuder" | "blizzard" | "sancta" | "dark" | "quake" | "aero")>
   | <NONELEMENTALE: ("flare" | "antima" | "dark")>
   | <DISTATO: ("novox" | "blind" | "bio" | "slow" | "haste" | "protect" | "shell" | "medusa")>
   | <BIANCA: ("energia" | "reiz" | "esna" | "dispel" | "areiz")>
   | <NOMEOGGETTO: ("pozione" | "antidoto" | "erbaDellEco" | "Collirio" | "AgoDorato" | "CodaDiFenice")>
   | <GF: ("Shiva" | "Ifrit" | "Bahamut" | "Leviathan" | "Quetzal" | "Carbuncle")>
   | <NOMETECNICA: ("SpiraleDiPotere" | "Renzokuken" | "EstasiMagica" | "BloodFest")>
   | <ALLEATI: "alleati">
   | <NEMICI: "nemici">
   | <SU: "su">
   | <PERSONAGGIO: (["A"-"Z", "a"-"z"])+>
}
